# cpp-multiarch

./: .gitignore  ArmLinux.cmake  CMakeLists.txt  README.md  build.sh  multiarch.yaml  vcpkg.json
.gitea/workflows/: ci.yaml  ci.yml
ci/: build.sh  build.yml  pipeline.yml
src/: CMakeLists.txt  main.cpp
stage/: Dockerfile
stage/config/: cpp-app.yaml
